[gd_scene load_steps=2 format=3 uid="uid://c8qx7vk5ypxmr"]

[ext_resource type="Script" path="res://_building/pieces/test_pieces.gd" id="1_test"]

[node name="TestPieces" type="Node3D"]
script = ExtResource("1_test")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.707107, -0.408248, 0.577350, 0, 0.816497, 0.577350, -0.707107, -0.408248, 0.577350, 15, 12, 15)
fov = 50.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.353553, 0.353553, 0, 0.707107, 0.707107, -0.5, -0.612372, 0.612372, 0, 10, 0)
light_energy = 1.2
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="InfoPanel" type="PanelContainer" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 310.0
offset_bottom = 200.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/InfoPanel"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2
text = "Building Piece Test"
horizontal_alignment = 1

[node name="PieceNameLabel" type="Label" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2
text = "Piece: None"

[node name="TierLabel" type="Label" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2
text = "Tier: 0"

[node name="CategoryLabel" type="Label" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2
text = "Category: WALL"

[node name="CostsLabel" type="Label" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2
text = "Costs: None"

[node name="HSeparator" type="HSeparator" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2
text = "Controls:
Q/E - Previous/Next Piece
1-4 - Material Variant
R - Rotate Piece
Space - Toggle Snap Points"
